interpreter/tests/golden-files/text.golden.enzo
rebinding this text and 
this is text example 2
just a plain text
rebinding this text and this is text example 2
100
5
100 plus 5 is: 105
2
[ "red", "purple", "green", "silver" ]
color 2 is purple
color 2 is purple
7
3
Sum=10 Prod=21
{ $greeting: "hi", $nums: [ 2, 4 ] }
hi! The nums are:2, and 4
π≈3.14
π≈3.14
foo\nbar
foo\"bar\"baz
foo\"bar\"baz
error: parse error in interpolation
    "text <bad syntax>";    // error: undefined variable or parse error in interp
          ^
error: parse error in interpolation
    "hello <$foo + >";      // error: parse error in interpolation
           ^
error: parse error in interpolation
    "hello <<$foo>>";       // error: nested <...> not allowed (for now)
           ^
